<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"

        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title_regLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:fontFamily="@font/be_vietnam_pro_black"
            android:text="@string/mobile_labs"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitCenter"

            android:src="@drawable/smooth_line"
            android:contentDescription="@string/Null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:text="@string/username"/>
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/rectangle_round_corner_shape_line_10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/rectangle_round_corner_shape_line_10"
                android:hint="@string/password"
                tools:ignore="RtlSymmetry"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/login_btt"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/black"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/login"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_1"
                    android:textSize="15sp"
                    android:text="@string/don_t_have_an_account"
                    tools:ignore="SmallSp" />
                <TextView
                    android:id="@+id/register_layout_navigator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:clickable="true"
                    android:text="@string/sign_up"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>