<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomePageActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"

        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title_regLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:fontFamily="@font/be_vietnam_pro_black"
            android:text="@string/mobile_labs"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitCenter"

            android:src="@drawable/smooth_line"
            android:contentDescription="@string/Null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Welcome to Home Page"/>

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_1"
            android:textSize="18sp"
            android:text="None"/>

        <Button
            android:id="@+id/logout_btt"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/log_out"/>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>